src/objects/NCP_Country_ESM_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EService_Managers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>You can use &apos;;&apos; separator to add several email addresses</inlineHelpText>
        <label>EService Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NCP Country ESM Mapping</label>
</CustomObject>